updated api_session
